--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,19 +9,19 @@
       <div class="card-content white-text">
         <div class="row">
           <div class="input-field col s12">
-            <input placeholder="Surname" id="sn" type="text" class="validate">
+            <input name="surname" placeholder="Surname" id="sn" type="text" class="validate">
             <label for="first_name">Surname Name</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
-            <input placeholder="Name" id="fn" type="text" class="validate">
+            <input name="fullname" placeholder="Name" id="fn" type="text" class="validate">
             <label for="first_name">Name</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
-            <input placeholder="Date Of Birth" id="dob" type="text" class="validate">
+            <input name="dob" placeholder="Date Of Birth" id="dob" type="text" class="validate">
             <label for="first_name">Date Of Birth</label>
           </div>
         </div>
